# AppUpdate

./: build.gradle  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output.json
app/src/androidTest/java/vip/ruoyun/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/vip/ruoyun/test/: MainActivity.java
appUpdate/: build.gradle
appUpdate/src/androidTest/java/vip/ruoyun/update/: ExampleInstrumentedTest.java
appUpdate/src/main/: AndroidManifest.xml
appUpdate/src/main/cpp/: CMakeLists.txt  appUpdate.cpp
appUpdate/src/main/java/vip/ruoyun/update/: AppUpdate.java
appUpdate/src/test/java/vip/ruoyun/update/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
key/: appUpdate
